# weaver

./: .gitignore  .weaverignore  AGENTS.md  README.md  fabric-requirements.txt  hello-requirements.txt  requirements.txt  setup.cfg
config/: warehouse_type_mapping.yml
docs/: authoring.md  build-and-load.md  command-reference.md  concepts.md  configuration.md  fabric_capacity_control.md  getting-started.md  sql-tables-and-central-metadata-plan.md
notebooks/: Hello DWG platform.ipynb
scripts/: create_ses_views.py  deploy_fabric_notebook.py  fabric_capacity.sh  fabric_loader_smoke.py  generate_pbip_from_tom_yml.py  generate_xmla_from_tom_yml.py  materialize_ses_view_data.py  run_fabric_notebook_job.py  run_fabric_pyspark.py  run_push_to_public_store.py  sparksession.py  sqlserver.py  sync_folder.py  sync_git_repo.py  sync_platform.py  wipe_views.py
source/: __init__.py  ddlhelper.py  etlhelper.py  fabric_sql.py  seshelper.py  sqlwrangle.py
tests/: conftest.py  dbrep_helpers.py  test_build_plan.py  test_cli_build.py  test_cli_load.py  test_config_databases.py  test_config_environment.py  test_database_resolution.py  test_ddlhelper.py  test_delta_materialisation.py  test_dependency_classification.py  test_fabric_cli.py  test_fabric_environment.py  test_fabric_substrate.py  test_folder_runtime.py  test_graph.py  test_lakehouse_commands.py  test_lakehouse_programs.py  test_load_policy.py  test_manifest.py  test_metadata.py  test_no_pyspark_core.py  test_object_import_isolation.py  test_python_discovery.py  test_runtime_bundle_plan.py  test_runtime_component_sync.py  (+10 more)
(+139 files in other folders)
