[metadata]
name = weaver-runtime
version = 0.1.0
description = Generic Microsoft Fabric, OneLake, SQL, and SES operational tooling.

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    azure-identity
    pyodbc
    pyyaml
    sqlparse

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    weaver = weaver_runtime.cli:main

[tool:pytest]
testpaths = tests
markers =
    spark: optional local Spark/Delta tests (run with: pytest -m spark)
    fabric: opt-in Fabric integration tests, need env vars (run with: pytest -m fabric)
addopts = -m "not spark and not fabric"
